# benchmarks

./: .gitignore  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/3DRS/: 3DRS.c  3DRS.drv.c  CMakeLists.txt  Makefile  bitmap.c  config.h
cmake/: es-bench-modules.cmake
kernels/: CMakeLists.txt
kernels/conservativeSmooth/: CMakeLists.txt  conservativeSmooth.c  conservativeSmooth.drv.c
kernels/conservativeSmooth/data/: lenna-noise.pgm
kernels/dilation/: CMakeLists.txt  Makefile  dilation.c  dilation.drv.c
kernels/erosion/: CMakeLists.txt  erosion.c  erosion.drv.c
kernels/gaussian5x5int/: CMakeLists.txt  Makefile  gaussian5x5int.c  gaussian5x5int.drv.c  run.sh
kernels/gaussian5x5int/dmem/: gaussian5x5int.dmem_init
kernels/gaussian5x5int/driver/: dmem_dump.c  dmem_init.c
kernels/gaussian5x5int/utils/: pgm.h
kernels/histogram/: CMakeLists.txt  histogram.c
kernels/median/: CMakeLists.txt  median.c  median.drv.c
kernels/median/data/: lenna-noise.pgm
kernels/van_herk/: CMakeLists.txt  van_herk.c  van_herk.drv.c  van_herk.h
kernels/van_herk/data/: lenna.pgm
kernels/yuv2rgb/: .hgignore  CMakeLists.txt  Makefile  run.sh  yuv2rgb.c
kernels/yuv2rgb/dmem/: yuv2rgb.mod.dmem_init
kernels/yuv2rgb/driver/: yuv2rgb.drv.c
kernels/yuv2rgb/utils/: driver_common.c
utils/: CMakeLists.txt  driver_common.c  driver_common.h  pgm.c  timer.c  timer.h
