cmake_minimum_required(VERSION 2.6)

PROJECT(ES-BENCH)

FIND_PACKAGE(PythonInterp)

SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules ${ES-BENCH_SOURCE_DIR}/cmake)


SET(CMAKE_CXX_FLAGS "-Wall")

INCLUDE(es-bench-modules)

INCLUDE_DIRECTORIES(${ES-BENCH_SOURCE_DIR}/utils)

SET(EXECUTABLE_OUTPUT_PATH ${ES-BENCH_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${ES-BENCH_BINARY_DIR}/lib)

SUBDIRS(kernels utils)
